tests/golden/snapshots/render_workspace__anchor_multiple_frontend_next.snap
---
source: tests/golden/render_workspace.rs
expression: corpus(tmp.path())
---
=== .gitignore ===
.anchor
.DS_Store
target
**/*.rs.bk
node_modules
test-ledger
.yarn
dist
build
.idea
.vscode
*.log
=== Anchor.toml ===
[toolchain]
anchor_version = "0.30.1"
solana_version = "1.18.18"

[features]
resolution = true
skip-lint = false

[programs.localnet]
my_dapp = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"

[programs.devnet]
my_dapp = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"

[registry]
url = "https://api.apr.dev"

[provider]
cluster = "localnet"
wallet = "~/.config/solana/id.json"

[scripts]
test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
=== Cargo.toml ===
[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
=== README.md ===
# MyDapp

Anchor workspace scaffolded by **sunscreen**.

- **Program:** `my_dapp`
- **Anchor:** `0.30.1`
- **Solana:** `1.18.18`
- **Cluster:** `localnet`
- **Frontend:** `next`

## Quickstart

```bash
yarn install
anchor build
anchor test
```

## Layout

- `programs/my_dapp/` — on-chain program (Rust + Anchor)
- `tests/` — TypeScript integration tests (mocha + chai)
- `migrations/deploy.ts` — Anchor deploy hook
- `sunscreen.yml` — sunscreen workspace config
=== app/app/layout.tsx ===
export const metadata = {
  title: "sunscreen app",
  description: "Generated by sunscreen",
};

export default function RootLayout({
  children,
}: {
  children: React.ReactNode;
}) {
  return (
    <html lang="en">
      <body>{children}</body>
    </html>
  );
}
=== app/app/page.tsx ===
export default function Home() {
  return (
    <main>
      <h1>MyDapp</h1>
      <p>Connected to cluster: <code>localnet</code></p>
      <p>Program: <code>my_dapp</code></p>
    </main>
  );
}
=== app/package.json ===
{
  "name": "my-dapp-app",
  "version": "0.1.0",
  "private": true,
  "scripts": {
    "dev": "next dev",
    "build": "next build",
    "start": "next start",
    "lint": "next lint"
  },
  "dependencies": {
    "next": "14.2.0",
    "react": "18.3.0",
    "react-dom": "18.3.0"
  },
  "devDependencies": {
    "@types/node": "20.0.0",
    "@types/react": "18.3.0",
    "@types/react-dom": "18.3.0",
    "typescript": "5.4.0"
  }
}
=== app/tsconfig.json ===
{
  "compilerOptions": {
    "target": "es2017",
    "lib": ["dom", "dom.iterable", "esnext"],
    "allowJs": true,
    "skipLibCheck": true,
    "strict": true,
    "noEmit": true,
    "esModuleInterop": true,
    "module": "esnext",
    "moduleResolution": "bundler",
    "resolveJsonModule": true,
    "isolatedModules": true,
    "jsx": "preserve",
    "incremental": true,
    "plugins": [{ "name": "next" }]
  },
  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
  "exclude": ["node_modules"]
}
=== migrations/deploy.ts ===
// Migrations are an early feature. Currently, they're nothing more than this
// single deploy script that's invoked from the CLI, injecting a provider
// configured from the workspace's Anchor.toml.

const anchor = require("@coral-xyz/anchor");

module.exports = async function (provider: any) {
  anchor.setProvider(provider);
};
=== package.json ===
{
  "name": "my-dapp",
  "version": "0.1.0",
  "private": true,
  "scripts": {
    "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
    "test": "anchor test"
  },
  "dependencies": {
    "@coral-xyz/anchor": "^0.30.0"
  },
  "devDependencies": {
    "@types/bn.js": "^5.1.0",
    "@types/chai": "^4.3.0",
    "@types/mocha": "^9.0.0",
    "chai": "^4.3.4",
    "mocha": "^9.0.3",
    "prettier": "^2.6.2",
    "ts-mocha": "^10.0.0",
    "typescript": "^4.3.5"
  }
}
=== programs/my_dapp/Cargo.toml ===
[package]
name = "my_dapp"
version = "0.1.0"
description = "Anchor program for MyDapp"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_dapp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
=== programs/my_dapp/Xargo.toml ===
[target.bpfel-unknown-unknown.dependencies.std]
features = []
=== programs/my_dapp/src/instructions/mod.rs ===
//! Auto-generated by sunscreen. Edit user regions only.

// === sunscreen:auto-generated:begin segment=instructions version=1 generator=cli ===
// === sunscreen:auto-generated:end segment=instructions ===
=== programs/my_dapp/src/lib.rs ===
use anchor_lang::prelude::*;

pub mod instructions;
use instructions::*;

declare_id!("Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS");

#[program]
pub mod my_dapp {
    use super::*;

    // === sunscreen:auto-generated:begin segment=dispatch version=1 generator=instruction ===
    pub fn initialize(_ctx: Context<Initialize>) -> Result<()> {
        msg!("MyDapp initialized");
        Ok(())
    }
    // === sunscreen:auto-generated:end segment=dispatch ===
}

#[derive(Accounts)]
pub struct Initialize {}
=== sunscreen.yml ===
version: 1
project:
  name: my-dapp
  description: "MyDapp — Solana workspace scaffolded by sunscreen"
  framework: anchor
  anchor_version: "0.30.1"
  solana_version: "1.18.18"
  rust_edition: "2021"
toolchain:
  required:
    anchor: "0.30.1"
    solana: "1.18.18"
    rustc: "1.79.0"
    node: "20.0.0"
scaffolding:
  default_template: workspace/anchor-multiple
programs:
  - name: my-dapp
    path: programs/my_dapp
workspace:
  frontend: next
=== tests/my-dapp.ts ===
import * as anchor from "@coral-xyz/anchor";
import { Program } from "@coral-xyz/anchor";
import { MyDapp } from "../target/types/my_dapp";

describe("my-dapp", () => {
  // Configure the client to use the local cluster.
  anchor.setProvider(anchor.AnchorProvider.env());

  const program = anchor.workspace.MyDapp as Program<MyDapp>;

  it("Is initialized!", async () => {
    const tx = await program.methods.initialize().rpc();
    console.log("Your transaction signature", tx);
  });
});
=== tsconfig.json ===
{
  "compilerOptions": {
    "types": ["mocha", "chai", "node"],
    "typeRoots": ["./node_modules/@types"],
    "lib": ["es2015"],
    "module": "commonjs",
    "target": "es6",
    "esModuleInterop": true,
    "resolveJsonModule": true
  }
}
