tests/golden/snapshots/render_workspace__anchor_multiple_frontend_none.snap
---
source: tests/golden/render_workspace.rs
expression: corpus(tmp.path())
---
=== .gitignore ===
.anchor
.DS_Store
target
**/*.rs.bk
node_modules
test-ledger
.yarn
dist
build
.idea
.vscode
*.log
=== .keep ===
# No frontend selected. This file is intentionally empty.
=== Anchor.toml ===
[toolchain]
anchor_version = "0.30.1"
solana_version = "1.18.18"

[features]
resolution = true
skip-lint = false

[programs.localnet]
my_dapp = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"

[programs.devnet]
my_dapp = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"

[registry]
url = "https://api.apr.dev"

[provider]
cluster = "localnet"
wallet = "~/.config/solana/id.json"

[scripts]
test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
=== Cargo.toml ===
[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
=== README.md ===
# MyDapp

Anchor workspace scaffolded by **sunscreen**.

- **Program:** `my_dapp`
- **Anchor:** `0.30.1`
- **Solana:** `1.18.18`
- **Cluster:** `localnet`
- **Frontend:** `none`

## Quickstart

```bash
yarn install
anchor build
anchor test
```

## Layout

- `programs/my_dapp/` — on-chain program (Rust + Anchor)
- `tests/` — TypeScript integration tests (mocha + chai)
- `migrations/deploy.ts` — Anchor deploy hook
- `sunscreen.yml` — sunscreen workspace config
=== migrations/deploy.ts ===
// Migrations are an early feature. Currently, they're nothing more than this
// single deploy script that's invoked from the CLI, injecting a provider
// configured from the workspace's Anchor.toml.

const anchor = require("@coral-xyz/anchor");

module.exports = async function (provider: any) {
  anchor.setProvider(provider);
};
=== package.json ===
{
  "name": "my-dapp",
  "version": "0.1.0",
  "private": true,
  "scripts": {
    "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
    "test": "anchor test"
  },
  "dependencies": {
    "@coral-xyz/anchor": "^0.30.0"
  },
  "devDependencies": {
    "@types/bn.js": "^5.1.0",
    "@types/chai": "^4.3.0",
    "@types/mocha": "^9.0.0",
    "chai": "^4.3.4",
    "mocha": "^9.0.3",
    "prettier": "^2.6.2",
    "ts-mocha": "^10.0.0",
    "typescript": "^4.3.5"
  }
}
=== programs/my_dapp/Cargo.toml ===
[package]
name = "my_dapp"
version = "0.1.0"
description = "Anchor program for MyDapp"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_dapp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
=== programs/my_dapp/Xargo.toml ===
[target.bpfel-unknown-unknown.dependencies.std]
features = []
=== programs/my_dapp/src/instructions/mod.rs ===
//! Auto-generated by sunscreen. Edit user regions only.

// === sunscreen:auto-generated:begin segment=instructions version=1 generator=cli ===
// === sunscreen:auto-generated:end segment=instructions ===
=== programs/my_dapp/src/lib.rs ===
use anchor_lang::prelude::*;

pub mod instructions;
#[allow(unused_imports)]
use instructions::*;

declare_id!("Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS");

#[program]
pub mod my_dapp {
    use super::*;

    // === sunscreen:auto-generated:begin segment=dispatch version=1 generator=cli ===
    // === sunscreen:auto-generated:end segment=dispatch ===
}
=== sunscreen.yml ===
version: 1
project:
  name: my-dapp
  description: "MyDapp — Solana workspace scaffolded by sunscreen"
  framework: anchor
  anchor_version: "0.30.1"
  solana_version: "1.18.18"
  rust_edition: "2021"
toolchain:
  required:
    anchor: "0.30.1"
    solana: "1.18.18"
    rustc: "1.79.0"
    node: "20.0.0"
scaffolding:
  default_template: workspace/anchor-multiple
programs:
  - name: my-dapp
    path: programs/my_dapp
workspace:
  frontend: none
=== tests/my-dapp.ts ===
import * as anchor from "@coral-xyz/anchor";
import { Program } from "@coral-xyz/anchor";
import { MyDapp } from "../target/types/my_dapp";

describe("my-dapp", () => {
  // Configure the client to use the local cluster.
  anchor.setProvider(anchor.AnchorProvider.env());

  const program = anchor.workspace.MyDapp as Program<MyDapp>;

  it("loads the program", () => {
    // Scaffold an instruction with `sunscreen scaffold instruction <name> --program my_dapp`,
    // then replace this with a real `program.methods.<name>(...).rpc()` call.
    if (!program) throw new Error("program not loaded");
  });
});
=== tsconfig.json ===
{
  "compilerOptions": {
    "types": ["mocha", "chai", "node"],
    "typeRoots": ["./node_modules/@types"],
    "lib": ["es2015"],
    "module": "commonjs",
    "target": "es6",
    "esModuleInterop": true,
    "resolveJsonModule": true
  }
}
